@@ -62,7 +62,7 @@ ArangoStatement.prototype.parse = function () {
 ////////////////////////////////////////////////////////////////////////////////
 
 ArangoStatement.prototype.explain = function () {
-  return EXPLAIN(this._query); 
+  return EXPLAIN(this._query, this._bindVars); 
 };
 
 ////////////////////////////////////////////////////////////////////////////////
